# string-x

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  README_ar.md  README_cn.md  README_en.md  README_es.md  pyproject.toml  requirements.txt  setup.cfg  strx  teste.py
.github/workflows/: ci.yml
asset/txt/: google_cse_id.txt
config/: setting.py
core/: __init__.py  auto_module.py  basemodule.py  command.py  filelocal.py  help_modules.py  http_async.py  http_pool.py  logger.py  output_formatter.py  retry.py  show_examples.py  style_cli.py  thread_process.py  upgrade_manager.py  validators.py
core/banner/: asciiart.py
core/banner/asciiart/: bomb.txt  brazilian_threat.txt  hacker_hackei.txt  linux_life.txt
docker/mysql-docker-compose/: Dockerfile  README.md
docker/mysql-docker-compose/init/: init.sql
docker/opensearch-docker-compose/: Dockerfile  README.md
docker/strx-docker-compose/: Dockerfile  README.md  docker-compose.yml
docs/: README.md
docs/dev/: README.md  arquitetura.md  contribuicao.md  criacao-funcoes.md  criacao-modulos.md  estrutura-projeto.md  sistema-output.md  sistema-tipos.md  uso-como-biblioteca.md
docs/tunning/: README.md  otimizacao-performance.md  scripts-automacao.md
docs/usabilidade/: README.md  comandos-essenciais.md  docker.md  encadeamento-modulos.md  exemplos-praticos.md  exemplos-string-unica.md  parametros.md  strings-unicas.md  uso-basico.md
docs/usabilidade/modulos/: README.md
examples/: advanced_python_example.py  demo_domains.txt  process_shell_result.py  python_example.py  test_input.txt
src/stringx/: __init__.py  cli.py
src/stringx/config/: default.json  defaults.py  setting.py
src/stringx/core/: auto_module.py  basemodule.py  command.py  filelocal.py  format.py  func_format.py  help_modules.py  http_async.py  logger.py  notify.py  output_formatter.py  python_executor.py  retry.py  security_validator.py  thread_process.py  upgrade_manager.py  user_agent_generator.py  validators.py
src/stringx/core/banner/: asciiart.py
src/stringx/core/banner/asciiart/: computer.txt  fklinkedin.txt  linux_life.txt  strx.txt
src/stringx/utils/auxiliary/ai/: __init__.py  anthropic.py  gemini.py  openai.py
src/stringx/utils/auxiliary/clc/: archive.py  bing.py  crtsh.py  dns.py  duckduckgo.py  emailverify.py  ezilon.py  geoip.py  github.py  google.py  googlecse.py  http_probe.py  ipinfo.py  lycos.py  naver.py  netscan.py  shodan.py  sogou.py  spider.py  subdomain.py  url_check.py  virustotal.py  whois.py  yahoo.py
src/stringx/utils/auxiliary/con/: __init__.py  discord.py  ftp.py  mongodb.py  mysql.py  opensearch.py  s3.py  slack.py  sqlite.py  ssh.py  telegram.py
src/stringx/utils/auxiliary/ext/: domain.py  (+14 more)
src/stringx/utils/helper/: functions.py
tests/: __init__.py  test_cli.py  test_file_io.py  test_file_io_comprehensive.py  test_pipeline.py  test_template_substitution.py
utils/auxiliary/: __init__.py
utils/auxiliary/ai/: __init__.py  gemini.py  openai.py
utils/auxiliary/clc/: __init__.py  archive.py  bing.py  crtsh.py  dns.py  duckduckgo.py  emailverify.py  ezilon.py  geoip.py  google.py  googlecse.py  http_probe.py  ipinfo.py  lycos.py  naver.py  netscan.py  shodan.py  sogou.py  subdomain.py  virustotal.py  whois.py  yahoo.py
utils/auxiliary/con/: __init__.py  ftp.py  http_probe.py  mysql.py  opensearch.py  slack.py  sqlite.py  ssh.py  telegram.py
utils/auxiliary/ext/: credential.py  cryptocurrency.py  documents.py  domain.py  email.py  file_hash.py  hash.py  ip.py  mac.py  metadata.py  phone.py  url.py
utils/helper/: functions.py
